--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "postcss": "8.4.33",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.1.0",
     "tailwind-merge": "^2.2.2",
     "tailwindcss": "3.4.1",
