--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "geist": "^1.2.1",
     "lucide-react": "^0.368.0",
     "next": "latest",
+    "nextjs-toploader": "^1.6.12",
     "postcss": "8.4.33",
     "react": "18.2.0",
     "react-dom": "18.2.0",
